--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ decorator==4.4.2
 defusedxml==0.7.1
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.4.0/en_core_web_sm-3.4.0-py3-none-any.whl
 entrypoints==0.4
+fitness-tools-0.1.1
 gitdb==4.0.9
 GitPython==3.1.18
 googletrans==3.0.0
